[package]
name = "rocket-passphrase-demo"
version = "0.1.0"
authors = ["Shawn Kinkade"]

[dependencies]
rand = "0.3.15"
rocket = "0.1.4"
rocket_codegen = "0.1.4"
lazy_static = "0.2.2"

[dependencies.rocket_contrib]
version = "0.1.4"
default-features = false
features = ["handlebars_templates", "tera_templates"]